src/test/deca/context/valid/print/printlnx-string-int.deca
// Description:
//    Programme minimaliste utilisant une concatenation 
//    de'une chaine et d'un entier comme parametre de printlx.
//
// Resultats:
//    Hello2

{
    int a = 2;
    printlnx("Hello", a);
}