src/test/deca/context/invalid/print/println-concat-incompatible.deca
// Description:
//    Programme minimaliste utilisant une concatenation 
//    de'une chaine et d'un booleen comme parametre de println.
//
// Resultats:
//    Erreur ligne 10

{
    boolean a = true;
    println("Hello" + a);
}